--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.5"
-  }
+    "nodemon": "^3.1.6"
+  },
+  "description": ""
 }
